[package]
name = "aleph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {  version = "0.13.2", features = ["dynamic_linking"] }
rand = "0.9.0-alpha.1"

[profile.dev.package."*"]
opt-level = 3